--- a/css.css
+++ b/css.css
@@ -817,7 +817,7 @@ body:not(.layout-front) #cover h1 {
 .article-previews .article-preview {
     background-color: var(--actual-background-color);
     box-shadow: 0 3px 6px -2px rgba(43, 131, 159, 0.06), 0 0 20px -2px rgba(0, 0, 0, 0.03);
-    border-radius: 12px;
+    border-radius: 0px;
     display: flex;
     flex-direction: column;
     align-items: stretch;
@@ -1116,4 +1116,55 @@ body:not(.layout-front) #cover h1 {
   padding: 0 10px;
   appearance: none;
   cursor: pointer;
+}
+
+/*Content*/
+
+.content-pr>a {
+    display: block;
+    overflow: hidden;
+    margin-bottom: 30px
+}
+
+.content-pr .content-prs {
+    background-color: var(--actual-background-color);
+    box-shadow: 0 3px 6px -2px rgba(43, 131, 159, 0.06), 0 0 20px -2px rgba(0, 0, 0, 0.03);
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    overflow: hidden;
+}
+
+.content-pr .content-prs .img {
+    height: 100px;
+    background: #eee center/cover no-repeat
+}
+
+.content-pr .content-prs .info {
+    padding: 10px;
+	padding-bottom: 20px;
+    white-space: nowrap;
+    font-family: "Varela Round", "Open Sans", -apple-system-font, BlinkMacSystemFont, "Helvetica Neue", "Helvetica", "Arial", sans-serif
+}
+
+.content-pr .content-prs .info * {
+    overflow-x: hidden;
+    text-overflow: ellipsis
+}
+
+.content-pr .content-prs .info .date {
+    font-size: 8.5pt;
+    margin-bottom: 4px
+}
+
+.content-pr .content-prs .info .title {
+    display: block;
+    font-size: 12pt
+}
+
+@media (min-width: 830px) {
+    .content-pr {
+    }
+    .content-pr.full {
+    }
 }
