--- a/css.css
+++ b/css.css
@@ -445,6 +445,7 @@ form.form button:hover {
 
 #cover {
     color: #888;
+	width:1920px;
     line-height: 1.3;
     padding: 40px 0;
     min-height: 400px;
