--- a/css.css
+++ b/css.css
@@ -446,16 +446,16 @@ form.form button:hover {
 #cover {
     color: #888;
     line-height: 1.3;
-    padding: 40px 0;
-    min-height: 400px;
-    height: 90vh;
-    max-height: 500px !important;
+    padding: 130px 0;
+	max-width: 100%; 
+	width: 1920px; // assume this is the default size 
+    max-height: 500px;
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
 	background-size: cover;
-    background: url(img/background.gif);
+    background: url(img/background.png);
 }
 
 #cover::after {
